--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+::selection {
+  background-color: $color1;
+}
+
 body {
   padding-top: 160px;
 }
@@ -86,6 +90,7 @@ p {
   justify-content: space-between;
   align-items: center;
   padding: 4rem 6rem;
+  z-index: 5;
 }
 
 // #financial-planning {
