--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1,14 +1,34 @@
 @import "./_constants.scss";
 
+.btn-outlined {
+  border-radius: 7px;
+  border: 1px solid $color2;
+  padding: 0.5rem 1rem;
+}
+
+.text-light {
+  color: $color5;
+}
+
 .account-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
+  @media screen and (max-width: 575px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
   .general {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: 575px) {
+      width: 100%;
+      justify-content: flex-start;
+    }
 
     img.avatar {
       margin-right: 1rem;
@@ -27,18 +47,37 @@
 
     img.bookmark {
       margin-left: 2rem;
+
+      @media screen and (max-width: 991px) {
+        margin-left: 8.5vw;
+      }
+
+      @media screen and (max-width: 575px) {
+        margin-left: auto;
+      }
     }
   }
 
-  .social a {
-    margin-right: 0.75rem;
+  .social {
+    @media screen and (max-width: 575px) {
+      margin-top: 1.5rem;
+    }
+
+    a {
+      margin-right: 0.75rem;
+    }
   }
 }
 
 .timeline-wrapper {
   position: relative;
-  height: 385px;
+  height: 435px;
   margin: 6rem 0;
+  overflow-x: auto;
+
+  @media screen and (max-width: 767px) {
+    margin: 3rem 0;
+  }
 
   .timeline-main,
   .middle-line {
@@ -50,7 +89,7 @@
   .middle-line {
     left: 0;
     width: 100%;
-    height: 1px;
+    height: 2px;
     background-color: $color3;
   }
 
@@ -63,6 +102,10 @@
     margin-right: auto;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    // @media screen and (max-width: 1525px) {
+    //   width: 67vw;
+    // }
 
     .item {
       position: relative;
