--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -61,6 +61,18 @@ hr {
   }
 }
 
+@media screen and (max-width: 381px) {
+  .explore .tags .tags-group button {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 351px) {
+  .explore .tags .tags-group button {
+    font-size: 11px;
+  }
+}
+
 .explore .tags .tags-group > * {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -210,9 +222,27 @@ hr {
 
 .timeline-wrapper {
   position: relative;
-  height: 435px;
+  height: 445px;
   margin: 6rem 0;
   overflow-x: auto;
+  /* Handle */
+  /* Handle on hover */
+}
+
+.timeline-wrapper::-webkit-scrollbar {
+  height: 2px;
+}
+
+.timeline-wrapper::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.timeline-wrapper::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.timeline-wrapper::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media screen and (max-width: 767px) {
@@ -246,7 +276,7 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 1106px;
+  width: 998px;
   margin-left: auto;
   margin-right: auto;
   left: 50%;
