--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -49,6 +49,14 @@ hr {
         @media screen and (max-width: 575px) {
           font-size: 14px;
         }
+
+        @media screen and (max-width: 381px) {
+          font-size: 12px;
+        }
+
+        @media screen and (max-width: 351px) {
+          font-size: 11px;
+        }
       }
 
       & > * {
@@ -175,9 +183,26 @@ hr {
 
 .timeline-wrapper {
   position: relative;
-  height: 435px;
+  height: 445px;
   margin: 6rem 0;
   overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    height: 2px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 
   @media screen and (max-width: 767px) {
     margin: 3rem 0;
@@ -201,14 +226,19 @@ hr {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1106px;
+    // width: 1106px;
+    width: 998px;
     margin-left: auto;
     margin-right: auto;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    // @media screen and (max-width: 1525px) {
-    //   width: 67vw;
+    // @media screen and (max-width: 1485px) {
+    //   width: 72vw;
+    // }
+
+    // @media screen and (max-width: 1200px) {
+    //   width: 1106px;
     // }
 
     .item {
