--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,6 +238,9 @@ p {
 
 .chart-container {
   padding: 3rem;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 575px) {
