--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -202,6 +202,9 @@ p {
 
 .chart-container {
   padding: 3rem;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
 
   @media screen and (max-width: 575px) {
     padding: 1rem;
